sass/screen.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

// Import additional CSS
@import "compass/reset";				// Reset styles
@import "normalize";						// Normalize
@import "h5bp";									// HTML5 Boilerplate


/* =======================================================================
		VARIABLES
======================================================================= */

/* Layout
----------------------------------------------------------------------- */
$max-width: 980px;				// The max width of the page content (Guess-timated from original PSD)

/* Colors
----------------------------------------------------------------------- */
// Background colors
$bg-color-01: #ececec;		// Gallery Gray
$bg-color-02: #e2e2e2;		// Mercury Gray
$bg-color-03: #af0253;		// Lipstick Pink

// Font colors
$font-color-01: #7c7b74;	// Friar Gray
$font-color-02: #ffffff;	// White
$font-color-03: #42014e;	// Plum Purple
$font-color-04: #df0e6b;	// Raspberry Pink
$font-color-05: #073768;	// Deep Sapphire

// Link colors
$link-color-01: #416589;	// Bismark Blue



/* =======================================================================
		MIXINS
======================================================================= */

// Center block elements using margin auto
@mixin center-block {
	display: block;					// Set display to block
	margin: 0 auto;					// Set margin to 0 (vertical) and auto (horizontal)
}

// Make an element span the full width of the window
@mixin full-width {
	@include center-block;	// Center the block element
	width: 100%;						// Set width to 100%
	max-width: $max-width;	// Set max-width to predefined value
}



/* =======================================================================
		LAYOUT
======================================================================= */

/* Content wrapper
----------------------------------------------------------------------- */
.wrap {
	@include full-width;		// Wrap content at the max width of the page
}



/* =======================================================================
		PRESENTATION STYLES
======================================================================= */

/* Global styles
----------------------------------------------------------------------- */
html, body {
	background: $bg-color-01;
	color: $font-color-01;
}

/* Link styles
----------------------------------------------------------------------- */
a {
	color: $link-color-01;

	&:hover {
		// Set hover styles
	}
}

/* Hero
----------------------------------------------------------------------- */
.hero {
	background: $bg-color-03 url('../img/hero-bg.jpg') top center no-repeat;
	background-size: cover;		// Set size to cover to fill entire width of the page
	color: $font-color-02;
}

/* Header
----------------------------------------------------------------------- */
header {
	h1 {
		margin: 0;							// Remove margins from headings in the header (fixes offset from the top of the page)
	}
}

/* Main Content
----------------------------------------------------------------------- */


/* Footer
----------------------------------------------------------------------- */



/* =======================================================================
		MISCELLANEOUS
======================================================================= */

/* Prompt to show for outdated browsers
----------------------------------------------------------------------- */
.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

// Temporarily hide stick-nav
.sticky-nav {
	display: none;
}

